{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 15,
  "lineage": "cb9b50f7-a0de-20e8-33aa-5a20b3b280af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_elastic_IP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01b69b6b53d57b144",
            "public_dns": "ec2-13-237-54-81.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.237.54.81",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0d6012fb27f844c10",
            "owner_id": "160372566358",
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "my_nat_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01b69b6b53d57b144",
            "id": "nat-01670e634d7c5e78b",
            "network_interface_id": "eni-0d4304ec6f93af49b",
            "private_ip": "10.0.0.92",
            "public_ip": "13.237.54.81",
            "subnet_id": "subnet-0843acc3f2bd7c69e",
            "tags": {
              "Name": "c04-iac02"
            }
          },
          "dependencies": [
            "aws_eip.my_elastic_IP",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_igw_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a059f0bdd81e3a58",
            "owner_id": "160372566358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6012fb27f844c10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_nat_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03c91677515bb647e",
            "owner_id": "160372566358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01670e634d7c5e78b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_eip.my_elastic_IP",
            "aws_nat_gateway.my_nat_gateway",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association_private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a0deb497c03b8ca",
            "route_table_id": "rtb-03c91677515bb647e",
            "subnet_id": "subnet-0843acc3f2bd7c69e"
          },
          "dependencies": [
            "aws_eip.my_elastic_IP",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.my_nat_route_table",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association_private_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1654dd97e21b3bb",
            "route_table_id": "rtb-03c91677515bb647e",
            "subnet_id": "subnet-0bb35c98f3de157b1"
          },
          "dependencies": [
            "aws_eip.my_elastic_IP",
            "aws_nat_gateway.my_nat_gateway",
            "aws_route_table.my_nat_route_table",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association_public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0617497bc745af4e2",
            "route_table_id": "rtb-0a059f0bdd81e3a58",
            "subnet_id": "subnet-0b356d82e6a3f4eef"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.my_igw_route_table",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association_public_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f8ec3226f27d22d",
            "route_table_id": "rtb-0a059f0bdd81e3a58",
            "subnet_id": "subnet-05200cb95b348cc61"
          },
          "dependencies": [
            "aws_internet_gateway.my_internet_gateway",
            "aws_route_table.my_igw_route_table",
            "aws_subnet.my_subnets",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160372566358:subnet/subnet-0b356d82e6a3f4eef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0b356d82e6a3f4eef",
            "map_public_ip_on_launch": true,
            "owner_id": "160372566358",
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160372566358:subnet/subnet-05200cb95b348cc61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-05200cb95b348cc61",
            "map_public_ip_on_launch": true,
            "owner_id": "160372566358",
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160372566358:subnet/subnet-0843acc3f2bd7c69e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0843acc3f2bd7c69e",
            "map_public_ip_on_launch": false,
            "owner_id": "160372566358",
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160372566358:subnet/subnet-0bb35c98f3de157b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0bb35c98f3de157b1",
            "map_public_ip_on_launch": false,
            "owner_id": "160372566358",
            "tags": {
              "Name": "c04-iac02"
            },
            "vpc_id": "vpc-025132b0f205d5077"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:160372566358:vpc/vpc-025132b0f205d5077",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0298cc99b8aab8c94",
            "default_route_table_id": "rtb-01135a4ff5783b94f",
            "default_security_group_id": "sg-0dfbfb7429f557d2d",
            "dhcp_options_id": "dopt-01a13f172355eaa79",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-025132b0f205d5077",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01135a4ff5783b94f",
            "owner_id": "160372566358",
            "tags": {
              "Name": "devopsacademy-iac"
            }
          }
        }
      ]
    }
  ]
}